--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     1941: 'est.png', 1958: 'est.png', 1959: 'est.png', 1960: 'est.png', 1969: 'est.png',
                     1974: 'est.png', 1975: 'est.png', 1981: 'est.png', 1984: 'est.png', 1987: 'est.png',
                     1988: 'est.png', 1990: 'est.png', 1992: 'est.png', 1993: 'est.png', 1997: 'est.png',
-                    1998: 'est.png', 2000: 'est.png', 2001: 'est.png', 2002: 'est.png', 2003: 'est.png',
+                    1998: 'est.png', 1999: 'est.png', 2000: 'est.png', 2001: 'est.png', 2002: 'est.png', 2003: 'est.png',
                     2005: 'est.png', 2008: 'est.png', 2009: 'est.png', 2010: 'est.png', 2011: 'est.png',
                     2013: 'est.png', 2016: 'est.png', 2017: 'est.png', 2018: 'est.png', 2019: 'est.png',
                     2020: 'est.png', 2021: 'est.png', 2023: 'est.png',
@@ -124,21 +124,20 @@
                 };
 
                 const cupWinners = {
-                    1938: 'est.png', 1963: 'est.png', 1978: 'est.png', 1979: 'est.png', 1985: 'est.png',
+                  1938: 'est.png', 1963: 'est.png', 1978: 'est.png', 1979: 'est.png', 1985: 'est.png',1956: 'est.png',
                     1988: 'est.png', 1990: 'est.png', 1996: 'est.png', 1998: 'est.png', 2005: 'est.png',
                     2006: 'est.png', 2007: 'est.png', 2010: 'est.png', 2015: 'est.png',
-                    1964: 'ca.png', 1966: 'ca.png', 1967: 'ca.png', 1968: 'ca.png', 1969: 'ca.png',
+                    1964: 'ca.png', 1966: 'ca.png', 1967: 'ca.png', 1968: 'ca.png', 1969: 'ca.png',1957: 'st.png',1959: 'st.png',1965: 'st.png',
                     1971: 'ca.png', 1972: 'ca.png', 1975: 'ca.png', 1991: 'ca.png', 1997: 'ca.png',
-                    1999: 'ca.png', 2016: 'ca.png', 2017: 'ca.png', 1946: 'cshl.png', 1950: 'cshl.png',
+                    1999: 'ca.png', 2016: 'ca.png', 2017: 'ca.png', 1946: 'cshl.png', 1950: 'cshl.png',1947: 'cshl.png',1948: 'cshl.png',1949: 'cshl.png',1950: 'cshl.png',
                     1953: 'cshl.png', 1954: 'cshl.png', 1984: 'cshl.png', 2000: 'cshl.png', 1958: 'ess.png',
                     1962: 'ess.png', 1973: 'ess.png', 1974: 'ess.png', 1980: 'ess.png', 1982: 'ess.png',
                     1995: 'ess.png', 2011: 'ess.png', 2013: 'ess.png', 2014: 'ess.png', 2022: 'ob.png',
                     2009: 'ob.png', 1992: 'ob.png', 1970: 'css.png', 1994: 'css.png', 2003: 'css.png',
                     2008: 'css.png', 2018: 'css.png', 2020: 'css.png', 2021: 'css.png', 1955: 'st.png',
                     2002: 'st.png', 1981: 'cab.png', 1986: 'cab.png', 2012: 'cab.png', 2019: 'usmo.png',
-                    1960: 'asm.png', 1976: 'asm.png', 1986: 'asm.png', 1989: 'asm.png', 1993: 'asm.png',
-                    1961: 'st.png', 1983: 'asm.png', 2023: 'st.png', 2004: 'esz.png', 1987: 'cot.png',
-                    1941: 'samb.jpg'
+                    1960: 'asm.png', 1976: 'asm.png', 1986: 'asm.png', 1989: 'asm.png', 1993: 'asm.png',1961: 'st.png',1983: 'asm.png',2023: 'st.png',
+                    2004: 'esz.png', 1987: 'cot.png', 1941: 'samb.jpg'
                 };
 
                 // Fallback function if the logo is missing
